# ReAgent

./: .dockerignore  .gitignore  README.md  docker-compose.yml
examples/: hello_trace.py  langgraph_demo.py  replay_demo.py  requirements.txt
reagent_sdk/: pyproject.toml
reagent_sdk/reagent_sdk/: __init__.py  recorder.py  replay.py
reagent_server/: Dockerfile  pyproject.toml
reagent_server/reagent_server/: __init__.py  database.py  main.py  models.py
reagent_server/reagent_server/routes/: ingest.py  replay.py  run.py  runs.py
reagent_ui/: index.html  package-lock.json  package.json  vite.config.js
reagent_ui/src/: App.jsx  api.js
reagent_ui/src/components/: KindBadge.jsx  SpanNode.jsx  StatusBadge.jsx
reagent_ui/src/pages/: LandingPage.jsx  ReplayDiffPage.jsx  RunDetailPage.jsx  RunnerPage.jsx  RunsPage.jsx
scripts/: init.sql  smoke_test.py
sdk/: pyproject.toml
sdk/reagent_sdk/: callback.py  recorder.py
server/: Dockerfile  pyproject.toml
server/reagent_server/: agent.py  database.py  main.py
ui/: index.html  package-lock.json
ui/src/: api.js  index.css  utils.js
ui/src/components/: DiffBlock.jsx  SpanNode.jsx
ui/src/pages/: RunDetailPage.jsx  RunsPage.jsx
