[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reagent-sdk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]

[tool.setuptools]
packages = ["reagent_sdk"]
package-dir = {"" = "."}
