[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reagent-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["reagent_server*"]
